WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304714
Table captions with perpendicular writing modes miscalculate table height
https://bugs.webkit.org/show_bug.cgi?id=304714
Summary
Table captions with perpendicular writing modes miscalculate table height
Ahmad Saleem
Reported
2025-12-26 17:56:04 PST
ssia - it progresses WPT - which we were failing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-26 17:56:11 PST
<
rdar://problem/167220730
>
Ahmad Saleem
Comment 2
2025-12-26 17:57:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55884
EWS
Comment 3
2026-01-05 11:07:00 PST
Committed
305110@main
(5ef3ef6b9fa8): <
https://commits.webkit.org/305110@main
> Reviewed commits have been landed. Closing PR #55884 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug