Fix table height calculation for captions with orthogonal writing modes https://bugs.webkit.org/show_bug.cgi?id=304714 rdar://167220730

Reviewed by Alan Baradlay.

When a caption has a perpendicular writing mode to its table, use the
caption's logical width (in caption's writing mode) as the contribution
to the table's logical height (in table's writing mode).

* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::layoutCaption):
* LayoutTests/imported/w3c/web-platform-tests/css/css-tables/tentative/caption-expected.txt: Progression

Canonical link: https://commits.webkit.org/305110@main